<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/window4"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/regMovieId"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/register_movies"
                android:textColor="#00838F"
                app:backgroundTint="#111212"

                app:cornerRadius="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.973"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

            <Button
                android:id="@+id/displayMovieID"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/display_movies"
                android:textColor="#00838F"
                app:backgroundTint="#111212"
                app:cornerRadius="28dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.973"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/favouritesId"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/favourites"
                android:textColor="#00838F"
                app:backgroundTint="#111212"
                app:cornerRadius="28dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.973"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

            <Button
                android:id="@+id/editMoviesId"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/edit_movies"
                android:textColor="#00838F"
                app:backgroundTint="#111212"
                app:cornerRadius="28dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.973"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/searchId"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/search"
                android:textColor="#00838F"
                app:backgroundTint="#111212"
                app:cornerRadius="28dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.973"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

            <Button
                android:id="@+id/ratingsId"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/ratings"
                android:textColor="#00838F"
                app:backgroundTint="#111212"
                app:cornerRadius="28dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.973"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/firstTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#00838F"
        android:text="@string/movie_flix"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic" />
</RelativeLayout>